--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@
 }
 
 body {
+  border: 1px solid rgb(252, 252, 252);
   background-color: rgb(37, 36, 36);
   color: white;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 40rem;
+  margin: 0 auto;
+  padding: 20vh 0;
 }
