--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 :root {
@@ -10,10 +13,20 @@
 
 body {
   border: 1px solid rgb(252, 252, 252);
-  background-color: rgb(37, 36, 36);
+  /* background-color: rgb(37, 36, 36); */
   color: white;
   height: 100vh;
   width: 40rem;
   margin: 0 auto;
-  padding: 1rem 0;
+  background: #fc466b; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #3f5efb,
+    #fc466b
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #3f5efb,
+    #fc466b
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
