--- a/src/components/Timer/timer.css
+++ b/src/components/Timer/timer.css
@@ -1,25 +1,28 @@
 .container {
-  border: 1px solid red;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 98vh;
-
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.09);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.4px);
+  -webkit-backdrop-filter: blur(6.4px);
+  border: 1px solid rgba(255, 255, 255, 0.06);
 }
 /*Titulo*/
 .container h1 {
-  border: 1px solid red;
   font-size: 6rem;
 }
 
-/* Section para inserir informacoes */ 
+/* Section para inserir informacoes */
 .menuOptions {
   width: 100%;
+  margin-top: 2rem;
 }
 .menuOptions form {
-  border: 1px solid red;
   margin-top: 2rem;
   display: flex;
   align-items: center;
@@ -27,26 +30,30 @@
   flex-direction: row;
   gap: 1rem;
   width: 100%;
-  
 }
 .menuOptions form input {
   width: 8rem;
   padding: 0 0.5rem;
+  /* background-color: rgb(37, 36, 36); */
+  background-color: none;
+  border: none;
+  border-radius: 2px;
+  color: rgb(0, 0, 0);
 }
 
 .menuOptions div {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  gap: 0.5rem;
 }
-
 
 /* Timer e barra de progresso */
 
 .timerAndProgressWrapper {
   margin: 2rem 0 2rem 0;
-  border: 1px solid red;
-  height: 40rem;
+  height: 35rem;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,24 +66,25 @@
 /* Barra de Progresso */
 
 .total {
-  border: 1px solid rgb(0, 0, 0);
-  width: 100%;
+  border: 0.1px solid rgb(37, 36, 36);
+  border-radius: 2px;
+  width: 50%;
   height: 1rem;
   margin-top: 3rem;
 }
 
 .progress {
-  border: 1px solid red;
   height: 100%;
+  border: 0.1px solid rgb(37, 36, 36);
+  border-radius: 2px;
   transition: width 1s ease-in-out;
-  
-  background-color: white;
+
+  background-color: rgb(223, 223, 223);
 }
 
 /* Botões */
 
 .buttonWrapper {
-  border: 1px solid red;
   height: 10rem;
   display: flex;
   align-items: center;
@@ -89,4 +97,6 @@
 .buttonWrapper button {
   height: 3rem;
   width: 10rem;
+  border-radius: 2px;
+  border:none;
 }
