--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  overflow: hidden;
 }
 
 :root {
@@ -12,21 +13,23 @@
 }
 
 body {
-  border: 1px solid rgb(252, 252, 252);
   /* background-color: rgb(37, 36, 36); */
   color: white;
   height: 100vh;
-  width: 40rem;
-  margin: 0 auto;
-  background: #fc466b; /* fallback for old browsers */
+  width: 100vw;
+  background: #fc466b;
   background: -webkit-linear-gradient(
     to right,
     #3f5efb,
     #fc466b
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  ); 
   background: linear-gradient(
     to right,
     #3f5efb,
     #fc466b
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
