--- a/src/components/Timer/timer.css
+++ b/src/components/Timer/timer.css
@@ -4,30 +4,28 @@
   justify-content: center;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
-  background: rgba(255, 255, 255, 0.09);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.4px);
-  -webkit-backdrop-filter: blur(6.4px);
-  border: 1px solid rgba(255, 255, 255, 0.06);
-  
+  height: calc(100vh - 1px);
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 1260px) {
   .container {
     max-width: 60rem;
+    border-radius: 50px;
+    background: var(--white);
+    box-shadow: 20px 20px 60px #c9c9c9, -20px -20px 60px #ffffff;
   }
 }
 /*Titulo*/
 .container h1 {
   font-size: 10rem;
+  font-weight: 800;
   width: 100%;
   text-align: center;
 }
 
 @media screen and (max-width: 560px) {
-  .container{
+  .container {
     padding: 2rem 1rem;
   }
 
@@ -45,33 +43,36 @@
   margin-top: 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: row;
-  gap: 1rem;
+  gap: 6rem;
+
   width: 100%;
 }
-.menuOptions form input {
-  width: 8rem;
-  padding: 0 0.5rem;
-  /* background-color: rgb(37, 36, 36); */
-  background-color: none;
-  border: none;
-  border-radius: 2px;
-  color: rgb(0, 0, 0);
-}
-
 .menuOptions div {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   gap: 0.5rem;
 }
+.menuOptions form div label {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.menuOptions form div input {
+  width: 6rem;
+  padding: 0 0.5rem;
+  background-color: none;
+  border: 1px solid var(--black);
+  border-radius: 2px;
+  color: rgb(0, 0, 0);
+}
 
 /* Timer e barra de progresso */
 
 .timerAndProgressWrapper {
   margin: 2rem 0 2rem 0;
-  height: 35rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -79,12 +80,13 @@
   justify-content: center;
 }
 
-.relogio{
+.relogio {
   display: flex;
 }
 
 .relogio p {
   font-size: 10rem;
+  font-weight: 500;
 }
 
 /* Barra de Progresso */
@@ -95,7 +97,7 @@
   min-width: 20rem;
   width: 30%;
   height: 1rem;
-  margin-top: 3rem;
+  
 }
 
 .progress {
@@ -103,8 +105,27 @@
   border: none;
   border-radius: 2px;
   transition: width 1s ease-in-out;
+  background-color: var(--black);
+}
 
-  background-color: rgb(223, 223, 223);
+/* Congrats */
+
+.congratsWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 3rem;
+}
+
+.congratsWrapper h2 {
+  font-size: 3rem;
+}
+
+.congratsWrapper p {
+  font-size: 1.7rem;
+  font-weight: 300;
 }
 
 /* Botões */
@@ -116,12 +137,11 @@
   justify-content: center;
   width: 100%;
   gap: 3rem;
-  margin-top: 3rem;
 }
 
 .buttonWrapper button {
   height: 3rem;
   width: 10rem;
   border-radius: 2px;
-  border:none;
+  border: none;
 }
